--- a/productoTernera.html
+++ b/productoTernera.html
@@ -28,6 +28,7 @@
             <button class="rowBoton">¿COMO USAR?</button>
             <button class="rowBoton">ASESORAMIENTO</button>
             <button class="rowBoton">OPINIONES</button>
+            <button class="rowBoton"id="blog" onclick="location.href='mainSitioInteres.html'">SITIOS DE INTERES</button>  
         </div>
         <div style="margin-left: auto;display: flex;justify-content: center;align-items:center ;">
             <img class="imagencarrito" src="Resources/Images/carrito.png" />
