--- a/mainSitioInteres.html
+++ b/mainSitioInteres.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-
+    <link rel="icon" type="image/x-icon" href="/Resources/Images/favicon.ico">
     <link rel="stylesheet" href="Styles/estilos.css">
     <link rel="stylesheet" href="Styles/mainSitioInteres.css">
     <link rel="stylesheet" href="Scripts/Bootstrap/css/bootstrap.css">
