--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="Scripts/Bootstrap/jquery-3.6.0.js"></script>
     <script src="Scripts/Bootstrap/js/bootstrap.min.js"></script>
     <script src="Scripts/popup2.js"></script>
+    <script src="Scripts/popupInicio.js"></script>
     <script src="Scripts/popup.js"></script>
     <script src="Scripts/popup3.js"></script>
     <script src="Scripts/scripts.js"></script>
@@ -20,7 +21,27 @@
 <body>
    
     <div class="menu">
-        
+        <div class="popup-wrapper" id="prueba">
+            <div class="rectangulo">
+                <div class="cerrar" id="popup-close4"style="margin-left: 17;text-align: right;margin-top: 1em;margin-right: 1em;"><img style="width: 2em;" src="Resources/Images/cerrar.png"/></div>
+                <div class="centrado">
+                <div class="texto2">
+              <div style="margin: auto;font-weight: bolder;"> REGALO DE BIENVENIDA</div> 
+              <div class="centrado">
+                <img src="Resources/Images/regalo.png" style="width: 3em;">
+              </div>
+            </div>
+            </div>
+              <div class="centrado">Un 30% de descuento en tu primera compra. </div>
+           
+            <div class="centrado">¡Ingresa el correo y recibiras el cupón!</div>
+          <div style="margin-left: 5em;margin-right: auto;margin-top: 1em;">  <input style="border-color: yellowgreen;" type="text"  placeholder="Escribe el correo"></div>
+            <div class="centrado">
+                <div class="botonInfo" id="cerrar" style="FONT-SIZE: unset;margin-top: 0.5em;" id="boton">ENVIAME EL CUPÓN</div> 
+            </div>
+
+            </div>
+        </div>
         <img class="imagenlogo" src="Resources/Images/logo.png" />
         <div class="rowMenu">
             <button class="rowBoton" id="inicio">INICIO</button> 
@@ -95,6 +116,9 @@
     <div class="titulosSeccion"id="productosDIV">PRODUCTOS</div>
     <div class="parrafofino" style="font-size:x-large;text-align: center;margin-bottom:1em;margin-top:1em;">
         Elige el menú que mas te guste y si lo deseas personalizalo para que se adapte mas a los gustos de tu peludo.</div>
+        <div class="parrafofino" style="font-size:x-large;text-align: center;margin-bottom:1em;margin-top:1em;">
+       Cada pack se compone de 7 packs con 300 gramos, una ración por día para que la repartas como quieras.
+        </div>
         <div class="alimentos">
             <!------1------->
             <div class="flip-card">
