--- a/index.html
+++ b/index.html
@@ -83,22 +83,22 @@
         </div>
 
         <div class="letrasBeneficios">
-            <p class="parrafo"> Dale a tu perro la alimentación que se merece.</p>
+            <p class="parrafo"> Dale a tu perro la comida natural que se merece.</p>
             <div class="beneficioIndividual">
 
                 <img class="iconosBeneficios" src="Resources/Images/icononatural.png" />
 
 
                 <div class="textoBeneficios">
-                    <div class="tituloBeneficios">Ingredientes naturales. </div><br />
-                    <div class="parrafofino">De la cesta al cuenco.</div>
+                    <div class="tituloBeneficios">Para todas las edades. </div><br />
+                    <div class="parrafofino">Comida natural para cachorros, comida natural para adultos, comida natural para todos.</div>
                 </div>
             </div>
             <div class="beneficioIndividual">
                 <img class="iconosBeneficios" src="Resources/Images/iconocereales.png" />
                 <div class="textoBeneficios">
-                    <div class="tituloBeneficios">Sin cereales, colorantes o conservantes. </div><br />
-                    <div class="parrafofino"> Únicamente compuesto por productos cárnicos, frutas y verduras. </div>
+                    <div class="tituloBeneficios">Comida sin cereales ni colorantes o conservantes. </div><br />
+                    <div class="parrafofino"> Únicamente compuesto por productos cárnicos, frutas y verduras.De la cesta al cuenco. </div>
                 </div>
             </div>
             <div class="beneficioIndividual">
@@ -115,7 +115,8 @@
  
     <div class="titulosSeccion"id="productosDIV">PRODUCTOS</div>
     <div class="parrafofino" style="font-size:x-large;text-align: center;margin-bottom:1em;margin-top:1em;">
-        Elige el menú que más te guste y si lo deseas personalízalo para que se adapte más a los gustos de tu peludo.</div>
+        Elige el menú que más te guste y si lo deseas personalízalo para que se adapte más a los gustos de tu peludo.</div> 
+        <div class="parrafofino" style="font-size:x-large;text-align: center;margin-bottom:1em;margin-top:1em;"> <b>¡Comida de perros a domicilio y personalizado!</b></div>
         <div class="parrafofino" style="font-size:x-large;text-align: center;margin-bottom:1em;margin-top:1em;">
        Cada pack se compone de <b>7 raciones con 300 gramos</b>, una ración por día para que la repartas como quieras.
         </div>
